# DenoDig

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: release.yml
deno-dig-lib/: .env  Cargo.toml
deno-dig-lib/src/: lib.rs
src/: main.rs
web/: index.html
