[package]
name = "DenoDig"
version = "1.1.0"
edition = "2021"

[dependencies]
eszip = "0.79.1"
object = "0.36.5"
futures = "0.3.31"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.20", features = ["derive"] }

[dev-dependencies]
tempfile = "3.13.0"
